--- a/landing-page/client/src/Components/FooterBar.css
+++ b/landing-page/client/src/Components/FooterBar.css
@@ -1,6 +1,6 @@
 .footer{
     width:100%;
-    height: 356px;
+    height: 300px;
     padding-top:62px;
     background: #252525;
     border: 1px solid #979797;
@@ -41,4 +41,21 @@ margin-bottom: 11px;
     font-family: Lato-Regular;
     font-size: 16px;
     letter-spacing: 0.56px;
+    width: 250px;
+    height: 35px;
+    margin-right: 7px;
   }
+
+.newsletter button{
+    background-color: transparent;
+    border: 3px solid #8367D8;
+    font-family: Lato-Bold;
+font-size: 18px;
+color: #D8D8D8;
+letter-spacing: 0.63px;
+width: 105px;
+height: 40px;
+}  
+.emailEnter{
+    margin-top: 10px;
+}
